<resources>
    <string name="app_name">Snail Launcher</string>
    <string name="action_settings">Set WallPaper</string>
    <string name="goback">Back</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Snail Wallpapers</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="choose_wallpaper">Choose Wallpaper</string>
    <string name="Toast_disable_3G_prompt">App Store has disabled downloading in 3G network!</string>
    <string name="using_3G_download">Downloading with 3G network now!</string>
    <string name="Toast_slot_overdue">\tslot has expired!</string>
    <string name="Notification_slot_expired_big_title">Slots Expired Prompt</string>
    <string name="Notification_slot_expired_little_title">Your slots there are %1$d days expire, after the expiration, some applications will be unbundling back to "All Applications", please purchase a timely new slot.</string>
    <string name="Notification_slot_expired_today_title">Your slots will expire today, after the expiration, some applications will be unbundling back to "All Applications", please purchase a timely new slot.</string>
    <string name="launch_error">Error:Application failed to start,Please download again!</string>
    <string name="launch_disable_error">Error:Application has been disabled!</string>
    <string name="menu_store">Store</string>
    <string name="menu_game">Games</string>
    <string name="menu_community">Social</string>
    <string name="menu_app">Apps</string>
    <string name="menu_call">Phone</string>
    <string name="menu_settings">Settings</string>
    <string name="detail_game_introduce">Instruction</string>
    <string name="detail_version">Version:%1$s</string>
    <string name="detail_size">Size:%1$s</string>
    <string name="detail_play_numbers">Online Players</string>
    <string name="detail_download">Download</string>
    <string name="detail_continue">Continue</string>
    <string name="detail_pause">Pause</string>
    <string name="detail_queue">Waiting</string>
    <string name="detail_install">Install</string>
    <string name="detail_installing">Installing</string>
    <string name="detail_error">Error</string>
    <string name="detail_launch">Launch</string>
    <string name="detail_update">Upgrade</string>
    <string name="detail_game_detail">Game Detail</string>
    <string name="detail_player_comment">Comments</string>
    <string name="store_options_search">Search</string>
    <string name="store_options_recommend">Recommend</string>
    <string name="store_options_collection">Album</string>
    <string name="store_options_category">Category</string>
    <string name="store_options_game_manager">Game Manager</string>
    <string name="store_options_settings">Store Settings</string>
    <string name="store_options_search_short">Search</string>
    <string name="store_options_recommend_short">RCMD</string>
    <string name="store_options_collection_short">Album</string>
    <string name="store_options_category_short">Category</string>
    <string name="store_options_game_manager_short">Manager</string>
    <string name="store_options_settings_short">Settings</string>
    <string name="store_search">Search</string>
    <string-array name="category_titles">
        <item>SLG</item>
        <item>Off-Line Game</item>
        <item>STG</item>
        <item>RPG</item>
        <item>SIM</item>
        <item>RSG</item>
        <item>SPT</item>
        <item>PZL</item>
        <item>ETC</item>
    </string-array>
    <string-array name="category_intros">
        <item>Quickspot/Decompression/Pet/Answer/Music</item>
        <item>SLG/RTS/Kongfu/Magic/Animation</item>
        <item>Shoting/3D/SSG/Tank/Sniper</item>
        <item>SLG/RTS/Kongfu/Magic/Animation</item>
        <item>Card/Chess/SIM/History/War/DOTA</item>
        <item>Parkour/Race/Motorcycle/Rowing/Plane</item>
        <item>Arcade/BasketBall/Soccer/Tennis/Billiards/ETC</item>
        <item>Dou Di Zhu/Chess/Mahjong/BRPG/Dezhou Poker/Card</item>
        <item>Game form Taiwan</item>
    </string-array>
    <string-array name="store_settings_titles">
        <item>Download only when WIFI connected</item>
        <item>Enable installed package automatically delete</item>
        <item>Enable game upgrade notification</item>
        <item>Enable remote game auto-installation</item>
    </string-array>
    <string-array name="account_age_array">
        <item>16~20</item>
        <item>21~25</item>
        <item>26~30</item>
        <item>31~35</item>
        <item>36~40</item>
        <item>41~45</item>
        <item>46~50</item>
        <item>51~55</item>
        <item>56~60</item>
    </string-array>
    <string-array name="personal_sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="store_dld_manager_downloading">Downloading</string>
    <string name="store_dld_manager_updatable">Upgrade</string>
    <string name="store_dld_manager_launchable">Installed</string>
    <string name="store_dld_manager_empty">There is no game,Go and find one in store!</string>
    <string name="store_dld_manager_cur_version">Version：%1$s</string>
    <string name="store_dld_manager_detail_not_found">No information about this application!</string>
    <string name="delete_task_prompt">Delete Task</string>
    <string name="delete_task_msg">Are you sure to delete the download task？</string>
    <string name="slot_title">Buy Slot</string>
    <string name="slot_balance">Balance:%1$d</string>
    <string name="slot_currency">Rabbit Coin</string>
    <string name="slot_ticket">Rabbit Certificate</string>
    <string name="slot_open_number">Purchase Quantity：</string>
    <string name="slot_number"></string>
    <string name="slot_pay_method">Charge Mode:</string>
    <string name="slot_pay_method_month">Pay by Months</string>
    <string name="slot_pay_method_year">Pay by Years</string>
    <string name="slot_open_duration">Purchase Time：</string>
    <string name="slot_month">Month</string>
    <string name="slot_year">Year</string>
    <string name="slot_buy_dialog_prompt">Are you sure to buy slot？</string>
    <string name="slot_pay_amount">Amount Payable：</string>
    <string name="slot_recharge">Deposit</string>
    <string name="slot_buy_now">Buy Now</string>
    <string name="slot_meal_1">Package 1：</string>
    <string name="slot_meal_2">Package 2：</string>
    <string name="slot_meal_3">Package 3：</string>
    <string name="slot_meal_text_1">30 slots for 1 month,20 Rabbit-Coin</string>
    <string name="slot_meal_text_2">30 slots for 1 year,\t180 Rabbit-Coin</string>
    <string name="slot_query_balance_prompt">Failed to query balance!</string>
    <string name="user_identity_overdue">Account state expired,please login again!</string>
    <string name="slot_should_login">Please login first!</string>
    <string name="slot_buy_success">Buy slot success!</string>
    <string name="slot_buy_failed">Failed to but slot!</string>
    <string name="status_download">Download</string>
    <string name="status_transfering">Continue</string>
    <string name="status_pause">Pause</string>
    <string name="status_queue">Wait</string>
    <string name="status_install">Install</string>
    <string name="status_installing">Installing</string>
    <string name="status_error">Error</string>
    <string name="status_launch">Launch</string>
    <string name="status_update">Upgrade</string>
    <string name="detail_title">Detail</string>
    <string name="detail_game_size">Size：</string>
    <string name="detail_game_version">Version：</string>
    <string name="account_mywealth">Assets</string>
    <string name="account_personal">INFO</string>
    <string name="account_recharge">Deposit</string>
    <string name="account_freecard">M-Card</string>
    <string name="account_logout">Logout</string>
    <string name="mywealth_game_counts">Games</string>
    <string name="mywealth_game_points">Points</string>
    <string name="personal_edit_account">Edit</string>
    <string name="personal_nickname">Nickname:</string>
    <string name="personal_phone_number">Phone</string>
    <string name="personal_age">Age:</string>
    <string name="personal_sex">Gender:</string>
    <string name="personal_open_freeflow">Enable Free-Flux</string>
    <string name="personal_modify_password">Change PWD</string>
    <string name="personal_unbind_phone_number">Unbind Phone</string>
    <string name="personal_save">Save</string>
    <string name="personal_female">F</string>
    <string name="personal_male">M</string>
    <string name="personal_empty_phone_number"></string>
    <string name="personal_no_bind_phone_number">Unbind</string>
    <string name="account_saving">Saving</string>
    <string name="account_save_success">Save successfully!</string>
    <string name="account_save_failed">Save failed!</string>
    <string name="account_outdate">Account state expired,please login again!</string>
    <string name="logout_confirm_prompt">Logout confirm</string>
    <string name="logout_confirm_msg">Are you sure to logout?</string>
    <string name="from_system">From System</string>
    <string name="from_camera">From Camera</string>
    <string name="from_gallery">Form Gallery</string>
    <string name="system_photo_dialog_title">System Figure</string>
    <string name="recharge_current_account">Account</string>
    <string name="recharge_my_balance">Balance</string>
    <string name="recharge_rubbit_currency">Rabbit Coin</string>
    <string name="recharge_rubbit_ticket">Rabbit Certificate</string>
    <string name="recharge_rubbit_recharge">Rabbit Deposit</string>
    <string name="recharge_ticket_recharge">Certificate Recharge</string>
    <string name="recharge_ticket_type_prompt">Certificate Type</string>
    <string name="recharge_ticket_code_prompt">Certificate Number</string>
    <string name="recharge_confirm">Confirm</string>
    <string name="recharge_input_not_empty">Error:Certificate number is empty!</string>
    <string name="purpose_phone_recharge">Mian-card deposit</string>
    <string name="purpose_game_recharge">Game deposit</string>
    <string name="purpose_buy_slot">Buy slots</string>
    <string name="rabbit_ticket_recharged_tip">Deposit%1$d Rabbit Certificate</string>
    <string name="rabbit_ticket_recharged_done">Success!</string>
    <string name="rabbit_ticket_purpose_title">Rabbit Certificate is used to:</string>
    <string name="phone_bind">Bind</string>
    <string name="all_app_moon_explain">Back</string>
    <string name="all_app_description">Please mark to display on the destop</string>
    <string name="all_app_count">All App：</string>
    <string name="all_app_used_slot">Used：</string>
    <string name="free_flow_privilege_tip">Free-Flux privileges：Download and play the specific game without any mobile flux cost!</string>
    <string name="free_flow_privilege_remark">You should bind you phone number before access Free-Flux privileges</string>
    <string name="free_flow_bind_phone_title">Free-Flux Phone：</string>
    <string name="free_flow_bind_phone_tip">If it is not your phone number,please bind yours again!</string>
    <string name="free_flow_bind_phone_hint">Enter Phone number in SIM Card 1</string>
    <string name="free_flow_bind_phone_status">Get Code</string>
    <string name="free_flow_unbind_phone_status">Unbind</string>
    <string name="free_flow_auto_code_title">Verification Code：</string>
    <string name="free_flow_auto_code_hine">Enter verification code</string>
    <string name="free_flow_warm_tip">Note：Free-Flux privileges need to access every month</string>
    <string name="free_flow_get_title">Access Free-Flux privileges</string>
    <string name="free_flow_get_tip">Your phone number can not access these privileges yet!</string>
    <string name="free_flow_get">Access</string>
</resources>