<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="175dp"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/photo_from_system"
        style="@style/AccountTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/from_system" />

    <TextView
        android:id="@+id/photo_from_camera"
        style="@style/AccountTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/from_camera" />

    <TextView
        android:id="@+id/photo_from_gallery"
        style="@style/AccountTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/from_gallery" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/photo_cancel"
        style="@style/AccountTextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/cancel" />

</LinearLayout>