<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/starting_guide_title_layout" />

    <TextView
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/rabbit_ticket_recharged_done"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rechargeTicket"
        style="@style/TextNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/rabbit_ticket_recharged_tip"
        android:textColor="#7FFFFFFF" />

    <LinearLayout
        android:layout_width="430dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/purpose_title"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rabbit_ticket_purpose_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/purpose_phone_recharge"
                style="@style/TextLabelSmallLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/purpose_phone_recharge"
                android:gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:text="@string/purpose_phone_recharge" />

            <TextView
                android:id="@+id/purpose_buy_slot"
                style="@style/TextLabelSmallLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableTop="@drawable/purpose_buy_slot"
                android:gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:text="@string/purpose_buy_slot" />

            <TextView
                android:id="@+id/purpose_game_recharge"
                style="@style/TextLabelSmallLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawableTop="@drawable/purpose_game_recharge"
                android:gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:text="@string/purpose_game_recharge" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/accountDoneBtn"
        style="@style/ClickBtnNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/account_login_btn_bg_selector"
        android:text="@string/all_app_moon_explain" />

</LinearLayout>