<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/starting_guide_title_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/free_flow_privilege_tip"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/free_flow_privilege_remark"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <RelativeLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/bind_phone_title"
            style="@style/TextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/free_flow_bind_phone_title"
            android:textStyle="bold" />

        <com.ireadygo.app.gamelauncher.ui.widget.CustomerEditText
            android:id="@+id/phone_number"
            style="@style/AccountEdittextNormal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bind_phone_title"
            android:layout_marginTop="12dp"
            android:hint="@string/free_flow_bind_phone_hint"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="15sp"
            android:background="@null"
            android:singleLine="true" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/phone_number"
            android:layout_alignRight="@+id/phone_number"
            android:layout_below="@+id/phone_number"
            android:background="#4CFFFFFF"
            android:paddingRight="5dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/phone_number"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/phone_number"
            android:gravity="center" >

            <TextView
                android:id="@+id/get_sms_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/free_flow_get_sms_selector"
                android:clickable="true"
                android:gravity="center"
                android:focusable="true"
                android:text="@string/free_flow_bind_phone_status"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/unbind_phone_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/free_flow_green_btn_selector"
                android:clickable="true"
                android:gravity="center"
                android:focusable="true"
                android:nextFocusDown="@+id/privilege_btn"
                android:nextFocusLeft="@+id/privilege_btn"
                android:text="@string/free_flow_unbind_phone_status"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/bind_phone_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="9dp"
        android:text="@string/free_flow_bind_phone_tip"
        android:textColor="#7FFFFFFF"
        android:textSize="12sp"
        android:visibility="gone" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/layout_auto_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="9dp"
            android:visibility="visible" >

            <TextView
                android:id="@+id/auto_code_title"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/free_flow_auto_code_title"
                android:textStyle="bold" />

            <com.ireadygo.app.gamelauncher.ui.widget.CustomerEditText
                android:id="@+id/auto_code"
                style="@style/AccountEdittextNormal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/auto_code_title"
                android:layout_marginTop="12dp"
                android:hint="@string/free_flow_auto_code_hine"
                android:inputType="number"
                android:maxLength="11"
                android:textSize="15sp"
                android:background="@null"
                android:singleLine="true" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignLeft="@+id/auto_code"
                android:layout_alignRight="@+id/auto_code"
                android:layout_below="@+id/auto_code"
                android:background="#4CFFFFFF"
                android:paddingRight="5dp" />

            <TextView
                android:id="@+id/phone_bind_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/auto_code"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/auto_code"
                android:background="@drawable/free_flow_green_btn_selector"
                android:clickable="true"
                android:gravity="center"
                android:focusable="true"
                android:text="@string/phone_bind"
                android:textColor="@android:color/white" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/layout_privilege_status"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="9dp"
            android:gravity="center_vertical"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/layout_privilege_get"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textSize="18sp"
                    android:text="@string/free_flow_get_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/privilege_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/free_flow_green_btn_selector"
                    android:clickable="true"
                    android:gravity="center"
                    android:focusable="true"
                    android:text="@string/free_flow_get"
                    android:nextFocusRight="@+id/unbind_phone_btn"
                    android:nextFocusUp="@+id/unbind_phone_btn"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/privilege_tip"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_flow_get_tip"
                android:textStyle="bold"
                android:layout_marginTop="40dp"
                android:textSize="18sp"
                android:visibility="gone" />
        </FrameLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/free_flow_warm_tip"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>