<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.ireadygo.app.gamelauncher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            style="@style/TextLabelSmallDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_small"
            android:text="@string/recharge_current_account" />

        <TextView
            android:id="@+id/account_name"
            style="@style/TextLabelMiddleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_middle"
            android:text="WN45678794" />

        <TextView
            style="@style/TextLabelSmallDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_small"
            android:text="@string/recharge_my_balance" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_small"
            android:orientation="horizontal"
            android:paddingLeft="2dp" >

            <TextView
                android:id="@+id/rubbitCurrency"
                style="@style/RubbitCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                style="@style/TextLabelSmallDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/recharge_rubbit_currency" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_small"
            android:orientation="horizontal"
            android:paddingLeft="2dp" >

            <TextView
                android:id="@+id/rubbitTicket"
                style="@style/RubbitCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                style="@style/TextLabelSmallDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/recharge_rubbit_ticket" />
        </LinearLayout>

        <TextView
            android:id="@+id/rabbitRecharge"
            style="@style/AccountButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/rabbitRecharge"
            android:nextFocusLeft="@id/rabbitRecharge"
            android:nextFocusRight="@+id/ticketType"
            android:nextFocusUp="@+id/accountRechargeBtn"
            android:text="@string/recharge_rubbit_recharge"
            android:textSize="@dimen/recharge_rabbit_btn_size" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="@dimen/recharge_line_width"
        android:layout_height="@dimen/recharge_divide_line_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white_second_transparency" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/line"
        android:orientation="vertical"
        android:paddingLeft="@dimen/recharge_right_layout_padding_left" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_middle"
            android:text="@string/recharge_ticket_recharge"
            android:textColor="@color/white"
            android:textSize="@dimen/recharge_ticket_recharge_size" />

        <com.ireadygo.app.gamelauncher.ui.widget.CustomerSpinner
            android:id="@+id/ticketType"
            style="@style/AccountSpinner"
            android:layout_width="@dimen/recharge_spinner_width"
            android:layout_height="wrap_content"
            android:prompt="@string/account_logout"
            android:layout_marginBottom="@dimen/recharge_distance_y_big"
            android:background="@drawable/recharge_spinner_bg_selector"
            android:entries="@array/recharge_ticket_types"
            android:nextFocusDown="@+id/ticketCode"
            android:nextFocusLeft="@id/rabbitRecharge"
            android:nextFocusRight="@+id/ticketType"
            android:nextFocusUp="@+id/accountRechargeBtn" >
        </com.ireadygo.app.gamelauncher.ui.widget.CustomerSpinner>

        <com.ireadygo.app.gamelauncher.ui.widget.CustomerEditText
            android:id="@+id/ticketCode"
            style="@style/AccountEdittextNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/recharge_distance_y_big"
            android:background="@drawable/recharge_edittext_bg_selector"
            android:hint="@string/recharge_ticket_code_prompt"
            android:nextFocusDown="@+id/rechargeConfirm"
            android:nextFocusLeft="@id/rabbitRecharge"
            android:nextFocusRight="@+id/ticketCode"
            android:nextFocusUp="@+id/ticketType" />

        <TextView
            android:id="@+id/rechargeConfirm"
            style="@style/AccountButtonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/rechargeConfirm"
            android:nextFocusLeft="@id/rabbitRecharge"
            android:nextFocusRight="@+id/rechargeConfirm"
            android:nextFocusUp="@+id/ticketCode"
            android:text="@string/recharge_confirm"
            android:textSize="@dimen/recharge_confirm_btn_size" />
    </LinearLayout>

</RelativeLayout>